third_party/move/move-compiler/tests/move_check/unit_test/expected_failure_invalid_literals.unit_test.exp
error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_invalid_literals.move:14:24
   │
14 │     #[expected_failure(abort_code=0u8, location=0x1::M)]
   │                        ^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Annotated non-u64 literals are not permitted
   │                        Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_invalid_literals.move:18:24
   │
18 │     #[expected_failure(abort_code=0u128, location=0x1::M)]
   │                        ^^^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Annotated non-u64 literals are not permitted
   │                        Invalid value in attribute assignment

